test: trigger CI/CD pipeline

--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,9 @@
     <p class="game-explanation">
       <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
     </p>
+    <p class="game-explanation">
+      <strong class="important">Note:</strong> This game is deployed via CI/CD pipeline.
+    </p>
   </div>
 
   <script src="js/bind_polyfill.js"></script>
