test: verify CI/CD works

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
 
     <div class="above-game">
       <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
+      <p class="game-intro">Push the button to start a new game.</p>
       <a class="restart-button">New Game</a>
     </div>
 
