--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,9 @@
     <p class="game-explanation">
       <strong class="important">Note:</strong> This game is deployed via CI/CD pipeline.
     </p>
+    <p class="game-explanation">
+      <strong class="important">Note:</strong> This game is deployed via CI/CD pipeline.
+    </p>
   </div>
 
   <script src="js/bind_polyfill.js"></script>
